# event_emitter

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Readme.md
examples/: any.rs  basic_usage.rs  comprehensive_demo.rs
src/: args_macro.rs  event.rs  lib.rs  main.rs
