[package]
name = "event_emitter"
version = "0.1.0"
edition = "2021"
authors = ["Sabry Awad <dr.sabry1997@gmail.com>"]
description = "A thread-safe event emitter library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sabry-awad97/event_emitter"
keywords = ["events", "emitter", "pubsub"]
categories = ["asynchronous", "concurrency"]


[dependencies]
log = "0.4.22"
parking_lot = "0.12.3"
smallvec = "1.13.2"
thiserror = "1.0.64"

[dev-dependencies]
colored = "2.1.0"
env_logger = "0.11.1"
tokio = { version = "1.28.0", features = ["full"] }
